--- a/refine.html
+++ b/refine.html
@@ -995,13 +995,14 @@ toGrid();
 	   //  document.getElementById("lb"+i).value = 0;
          
 	   //  document.getElementById("ub"+i).value =0;
-      var wid1=  document.getElementById("lb"+0).value.visualLength()+15;
+ var wid1=  document.getElementById("lb"+0).value.visualLength()+15;
+       var wid2=  document.getElementById("vb"+0).value.visualLength()+30;
               var element = document.getElementById("lb"+i);
                  element.style.width = wid1+"px";
              var element1 = document.getElementById("ub"+i);
                  element1.style.width = wid1+"px";
                    var element2 = document.getElementById("vb"+i);
-                 element2.style.width = wid1+"px";
+                 element2.style.width = wid2+"px";
     // +" ";
 	}// var wid1=  document.getElementById("lb0"+1).value.visualLength()+20;
             /*  var element = document.getElementById("lb0"+(m+1));
