--- a/SimplePivotTollForBoundedProblem/Bounded Problem'SimplePivotTool.html
+++ b/SimplePivotTollForBoundedProblem/Bounded Problem'SimplePivotTool.html
@@ -4,7 +4,7 @@
 "http://www.w3.org/TR/REC-html40/loose.dtd">
 <HTML>
 <HEAD>
-<TITLE>Simplex Pivot Tool</TITLE>
+<TITLE>Bounded Simplex Pivot Tool</TITLE>
 <LINK REL="SHORTCUT ICON" HREF="/myshield.png" TYPE="image/png">
 <LINK REL="stylesheet" HREF="boundedsimplex.css" TYPE="text/css" MEDIA="screen">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
