--- a/SimplePivotTollForBoundedProblem/Bounded Problem'SimplePivotTool.html
+++ b/SimplePivotTollForBoundedProblem/Bounded Problem'SimplePivotTool.html
@@ -678,8 +678,8 @@ add("text","",1 ,m+2,"readonly","sign"  ,"lb"+(m+2));
 	    rowElement.appendChild(element);
 
     
-	add("button", "", 80, m+3, "readonly", "butvar", "basicvars");
-	add("button", "", 80, m+4, "readonly", "butvar", "nonbasicvars");
+	add("button", "", 80, m+3, "readonly", "val", "basicvars");
+	add("button", "", 80, m+4, "readonly", "val", "nonbasicvars");
 	for (i=1; i<=m; i++) {
 	    for (j=1; j<=n; j++) {
 	        var element = document.getElementById("x"+i+","+j);
