--- a/Bounded/Bounded Problem'SimplePivotToollastchangefrom summer.html
+++ b/Bounded/Bounded Problem'SimplePivotToollastchangefrom summer.html
@@ -5,12 +5,12 @@
 <HTML>
 <HEAD>
 <TITLE>Bounded Simplex Pivot Tool</TITLE>
-<!--<LINK REL="SHORTCUT ICON" HREF="/myshield.png" TYPE="image/png">-->
+<LINK REL="SHORTCUT ICON" HREF="/myshield.png" TYPE="image/png">
 <LINK REL="stylesheet" HREF="boundedsimplex.css" TYPE="text/css" MEDIA="screen">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <meta charset="utf-8"/>
-<!--<script src="sprintf.js" type="text/javascript"></script>-->
-<script src="function.js" type="text/javascript"></script>
+<script src="sprintf.js" type="text/javascript"></script>
+<script src="functionssummer.js" type="text/javascript"></script>
 </HEAD>
 
 <BODY onload="start()" bgcolor="white">
