--- a/Boundedlast - Copy - Copy/Bounded Problem'SimplePivotToollastchangefrom summer.html
+++ b/Boundedlast - Copy - Copy/Bounded Problem'SimplePivotToollastchangefrom summer.html
@@ -10,7 +10,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <meta charset="utf-8"/>
 <!--<script src="sprintf.js" type="text/javascript"></script>-->
-<script src="function.js" type="text/javascript"></script>
+<script src="functionssummer.js" type="text/javascript"></script>
 </HEAD>
 
 <BODY onload="start()" bgcolor="white">
