Update Bounded Simplex pivot tool Master project.html

--- a/Final version/Bounded Simplex pivot tool Master project.html
+++ b/Final version/Bounded Simplex pivot tool Master project.html
@@ -61,19 +61,18 @@ Select an Exercise from <i>Linear Programming: Foundations and Extensions</i>:
 	      <option value="Eq_2_2">Equation 2.2</option> 
 	      <option value="Eq_452">Equation 452</option> 
 	      <option value="Eq_452">Equation 452.1</option>
-
 	    </select>
 	    <p>
    <p>
 Or: &nbsp; &nbsp;
-Select some setted up homeworks and exemples:
+Select some set up Examples:
 	    <select class="input" onchange="setExercise( this.value )"> 
 	      <option value="--">--</option> 
 		<option value="HW_2_1">Homework 2_1</option> 
 		<option value="HW_2_2">Homework 2_2</option> 
 		<option value="HW_3_1">Homework 3_1</option> 
 		<option value="HW_3_2">Homework 3_2</option> 
-	      <option value="Ex_4_4">Exemple</option> 
+               <option value="Ex_4_4">Exemple</option> 
 	      <option value="cycle">Cycle Exemple</option> 
 	      <option value="Phase_1">Phase 1 Exemple</option> 
 	      <option value="Phase_2"> Phase 2 Exemple</option>
@@ -82,7 +81,6 @@ Select some setted up homeworks and exemples:
 	      <option value="degen">Degenerate Exemple</option>
 	      <option value="primal1">Primal 1</option>
 	      <option value="dual1">Dual 1</option>
-
 	    </select>
 	    <p>
 
