--- a/Final version - Copy/Bounded Simplex pivot tool Master project.html
+++ b/Final version - Copy/Bounded Simplex pivot tool Master project.html
@@ -9,8 +9,9 @@
 <LINK REL="stylesheet" HREF="boundedsimplex.css" TYPE="text/css" MEDIA="screen">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <meta charset="utf-8"/>
-<!--<script src="fraction.js" type="text/javascript"></script>-->
+<script src="fraction.js" type="text/javascript"></script>
 <script src="functions.js" type="text/javascript"></script>
+
 </HEAD>
 
 <BODY onload="start()" bgcolor="white">
@@ -29,8 +30,9 @@ Variables   = <input size="3" value="4" class="input" id="n" onchange="setn(this
 	      <option value="Primal w/ x0">Primal w/ x0</option> 
 	      -->
 	    <!-- <option value="Lexicographic">Lexicographic</option> 
-	      <option value="Klee-Minty">Klee-Minty</option> 
-	      <option value="Dual">Dual</option> -->
+	      <option value="Klee-Minty">Klee-Minty</option> -->
+	      <option value="Dual">Dual</option> 
+		<option value="Combined">No preference</option> 
 	    </select>,
 	    &nbsp; &nbsp;
 	    <button class="input" onclick="start()">Clear</button>
@@ -43,8 +45,45 @@ Or: &nbsp; &nbsp;
 Select an Exercise from <i>Linear Programming: Foundations and Extensions</i>:
 	    <select class="input" onchange="setExercise( this.value )"> 
 	      <option value="--">--</option> 
+	    	<option value="Ex_2_1">Exercise 2.1</option> 
+	      <option value="Ex_2_8">Exercise 2.8</option> 
+	      <option value="Ex_3_2">Exercise 3.2</option> 
+	      <option value="Ex_4_1">Exercise 4.1</option> 
+	      <option value="Ex_4_2">Exercise 4.2</option> 
+	      <option value="Ex_5_5">Exercise 5.5</option> 
+	      <option value="Ex_5_6">Exercise 5.6</option> 
+	      <option value="Ex_6_1">Exercise 6.1</option> 
+	      <option value="Lec_2_1">Lecture 2.1</option> 
+	      <option value="Lec_2_2">Lecture 2.2</option> 
+	      <option value="Lec_4_1">Lecture 4.1</option> 
+	      <option value="Lec_5_1">Lecture 5.1</option> 
+	      <option value="Lec_5_2">Lecture 5.2</option> 
+	      <option value="Eq_2_2">Equation 2.2</option> 
+	      <option value="Eq_452">Equation 452</option> 
+	      <option value="Eq_452">Equation 452.1</option>
 	    </select>
 	    <p>
+   <p>
+Or: &nbsp; &nbsp;
+Select some set up Examples:
+	    <select class="input" onchange="setExercise( this.value )"> 
+	      <option value="--">--</option> 
+		<option value="HW_2_1">Homework 2_1</option> 
+		<option value="HW_2_2">Homework 2_2</option> 
+		<option value="HW_3_1">Homework 3_1</option> 
+		<option value="HW_3_2">Homework 3_2</option> 
+               <option value="Ex_4_4">Exemple</option> 
+	      <option value="cycle">Cycle Exemple</option> 
+	      <option value="Phase_1">Phase 1 Exemple</option> 
+	      <option value="Phase_2"> Phase 2 Exemple</option>
+	      <option value="Unbounded">Unbounded Exemple</option>
+	      <option value="Fig_2_1">Figure Exemple</option>
+	      <option value="degen">Degenerate Exemple</option>
+	      <option value="primal1">Primal 1</option>
+	      <option value="dual1">Dual 1</option>
+	    </select>
+	    <p>
+
 <div class="row">
 <div class="column"> <canvas id="blah" width="0" height="0"></canvas> </div>
 <div class="column">
@@ -75,6 +114,7 @@ Select an Exercise from <i>Linear Programming: Foundations and Extensions</i>:
 	      <option value="Invisible">Invisible</option> 
 	    </select>
 	    <p>
+
 <FORM>
 	    <h3> Current Dictionary </h3>
 	    <p>
@@ -100,15 +140,34 @@ Select an Exercise from <i>Linear Programming: Foundations and Extensions</i>:
 <div id="rowStuff17"></div>
 <div id="rowStuff18"></div>
 <div id="rowStuff19"></div>
+<div id="rowStuff20"></div>
+<div id="rowStuff21"></div>
+<div id="rowStuff22"></div>
+<div id="rowStuff23"></div>
+<div id="rowStuff24"></div>
+<div id="rowStuff25"></div>
 </FORM>
 <p>
+
 <button class="input" onclick="ck_opt()">Optimal</button> &nbsp; &nbsp;
 <button class="input" onclick="ck_p_infeas()">Infeasible</button> &nbsp; &nbsp;
 <button class="input" onclick="ck_p_unbdd()">Unbounded</button> 
-</div>
+
+<p>
+<font size="-2" color="gray">
+Pick a judge:
+<select style="color:gray" class="input" id="method" onchange="setBarker( this.value)">
+<option style="color:gray" value='{"bark":["youre-so-close.mp3", "deduction.mp3", "brain.mp3"]}'>Sound</option> 
+<option style="color:gray" value='{"bark":["learn-from-your-mistakes-online-audio-converter.mp3", "fokeeper.mp3","easy-peasy.mp3"]}'>Line</option> 
+<option style="color:gray" value='{"bark":["tryfan.mp3", "ok_to_pass.mp3", "this-ends-now.mp3"]}'>Ok/Not Ok</option> 
+<option style="color:gray" value='{"bark":["engineer_no01_1.mp3", "yes_JGNOYIF.mp3","i-am-tired.mp3"]}'>Yes/No</option> 
+<option style="color:gray" value='{"bark":["stop-clicking-me.mp3", "champion.mp3","taylor-swift-vma-award-moment-ruined-by-kanye-west-audiotrimmer.mp3"]}'>Mixed</option> 
+<option style="color:gray" value='{"bark":["vanoss-no-no-no-dont-do-that.mp3", "feel good.mp3","excavatorvoicebuilddone05.mp3"]}'>Victory</option> 
+</select>
+</font>
+</div id="container">
 <div class="column"> <p> <canvas id="plot2d" width="0" height="0"></canvas> <p> </div>
 </div>
-
 </BODY>
 </HTML>
 
